--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>ej's nest hotel renewal</title>
     
     <link rel="icon" href="/img/nest_fav.png">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/mediascreen.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/mediascreen.css">
     
     <!-- date range picker -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
@@ -17,11 +17,8 @@
     <!-- swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <!-- firebase -->
-    <script defer src="/__/firebase/9.6.11/firebase-app-compat.js"></script>
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-    <script src="/nest-script.js"></script>
+    <script src="/js/nest-script.js"></script>
   </head>
   <body>
     <ul class="skip-menu">
