절대 경로로 수정

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ej's nest hotel renewal</title>
     
-    <link rel="icon" href="/img/nest_fav.png">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/mediascreen.css">
+    <link rel="icon" href="/ejin-nest/img/nest_fav.png">
+    <link rel="stylesheet" href="/ejin-nest/css/style.css">
+    <link rel="stylesheet" href="/ejin-nest/css/mediascreen.css">
     
     <!-- date range picker -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-    <script src="/js/nest-script.js"></script>
+    <script src="/ejin-nest/js/nest-script.js"></script>
   </head>
   <body>
     <ul class="skip-menu">
@@ -52,11 +52,11 @@
       </button>
       <h1 class="logo">
         <a href="#none" class="logo_btn">
-          <img src="/img/main_logo.png" alt="네스트호텔">
+          <img src="/ejin-nest/img/main_logo.png" alt="네스트호텔">
         </a>
       </h1>
       <div class="gnb_bar">
-        <a href="/sub-page/nest-login.html">로그인</a>
+        <a href="/ejin-nest/sub-page/nest-login.html">로그인</a>
         <a href="#none">회원가입</a>
         <a href="#none">예약하기</a>
         <a href="#none">예약확인</a>
@@ -487,15 +487,15 @@
             <div class="swiper-wrapper acmd_pic_list">
               <div class="swiper-slide acmd_pic_item">
                 <span class="pic_dim"></span>
-                <img src="/img/acmd_stand_twin.jpeg" alt="싱글 침대 2개가 놓인 스탠다드 트윈 객실">
+                <img src="/ejin-nest/img/acmd_stand_twin.jpeg" alt="싱글 침대 2개가 놓인 스탠다드 트윈 객실">
               </div>
               <div class="swiper-slide">
                 <span class="pic_dim"></span>
-                <img src="/img/acmd_stand_double.jpeg" alt="더블 침대 1개가 놓인 스탠다드 더블 객실">
+                <img src="/ejin-nest/img/acmd_stand_double.jpeg" alt="더블 침대 1개가 놓인 스탠다드 더블 객실">
               </div>
               <div class="swiper-slide">
                 <span class="pic_dim"></span>
-                <img src="/img/acmd_stand_supertwin.jpeg" alt="더블 침대 1개, 싱글 침대 1개가 놓인 스탠다드 수퍼 트윈 객실">
+                <img src="/ejin-nest/img/acmd_stand_supertwin.jpeg" alt="더블 침대 1개, 싱글 침대 1개가 놓인 스탠다드 수퍼 트윈 객실">
               </div>
             </div>
             <p class="acmd_pic_title">STANDARD</p>
@@ -522,15 +522,15 @@
             <div class="swiper-wrapper acmd_pic_list">
               <div class="swiper-slide acmd_pic_item">
                 <span class="pic_dim"></span>
-                <img src="/img/acmd_deluxe_twin.jpeg" alt="더블 침대 2개와 싱글 침대 1개가 놓인 디럭스 트윈 객실">
+                <img src="/ejin-nest/img/acmd_deluxe_twin.jpeg" alt="더블 침대 2개와 싱글 침대 1개가 놓인 디럭스 트윈 객실">
               </div>
               <div class="swiper-slide">
                 <span class="pic_dim"></span>
-                <img src="/img/acmd_deluxe_double.jpeg" alt="더블 침대 1개가 놓인 디럭스 더블 객실">
+                <img src="/ejin-nest/img/acmd_deluxe_double.jpeg" alt="더블 침대 1개가 놓인 디럭스 더블 객실">
               </div>
               <div class="swiper-slide">
                 <span class="pic_dim"></span>
-                <img src="/img/acmd_deluxe_fam.jpeg" alt="더블 침대 2개가 놓인 디럭스 패밀리 객실">
+                <img src="/ejin-nest/img/acmd_deluxe_fam.jpeg" alt="더블 침대 2개가 놓인 디럭스 패밀리 객실">
               </div>
             </div>
             <p class="acmd_pic_title">DELUXE</p>
@@ -557,19 +557,19 @@
             <div class="swiper-wrapper acmd_pic_list">
               <div class="swiper-slide acmd_pic_item">
                 <span class="pic_dim"></span>
-                <img src="/img/acmd_suite_studio.jpeg" alt="킹사이즈 침대 1개가 놓인 스튜디오 스위트 객실">
+                <img src="/ejin-nest/img/acmd_suite_studio.jpeg" alt="킹사이즈 침대 1개가 놓인 스튜디오 스위트 객실">
               </div>
               <div class="swiper-slide">
                 <span class="pic_dim"></span>
-                <img src="/img/acmd_suite_reed.jpeg" alt="킹사이즈 침대 1개가 놓인 리드 스위트 객실">
+                <img src="/ejin-nest/img/acmd_suite_reed.jpeg" alt="킹사이즈 침대 1개가 놓인 리드 스위트 객실">
               </div>
               <div class="swiper-slide">
                 <span class="pic_dim"></span>
-                <img src="/img/acmd_suite_panorama.jpeg" alt="킹사이즈 1개가 놓인 파노라마 스위트 객실">
+                <img src="/ejin-nest/img/acmd_suite_panorama.jpeg" alt="킹사이즈 1개가 놓인 파노라마 스위트 객실">
               </div>
               <div class="swiper-slide">
                 <span class="pic_dim"></span>
-                <img src="/img/acmd_suite_patio.jpeg" alt="킹사이즈 침대 2개가 놓인 파티오 스위트 객실">
+                <img src="/ejin-nest/img/acmd_suite_patio.jpeg" alt="킹사이즈 침대 2개가 놓인 파티오 스위트 객실">
               </div>
             </div>
             <p class="acmd_pic_title">SUITE</p>
@@ -610,7 +610,7 @@
           문화적인 활기와 영감이 가득한 네스트호텔은 그 자체로 여행의 목적지가 될 수 있습니다.
         </p>
         <div class="pride_icon">
-          <img src="/img/dh_logo.png" alt="디자인호텔 멤버스 로고입니다" class="designhotel_logo">
+          <img src="/ejin-nest/img/dh_logo.png" alt="디자인호텔 멤버스 로고입니다" class="designhotel_logo">
         </div>
       </div>
     </section>
@@ -718,10 +718,10 @@
         </div>
         <div class="footer_right">
           <a href="#none" class="partners_logo">
-            <img src="/img/dh_logo.png" alt="네스트 호텔의 파트너 '디자인호텔 멤버스' 홈페이지로 이동합니다">
+            <img src="/ejin-nest/img/dh_logo.png" alt="네스트 호텔의 파트너 '디자인호텔 멤버스' 홈페이지로 이동합니다">
           </a>
           <a href="#none" class="partners_logo">
-            <img src="/img/spg_logo.png" alt="네스트 호텔의 파트너 'spg' 홈페이지로 이동합니다">
+            <img src="/ejin-nest/img/spg_logo.png" alt="네스트 호텔의 파트너 'spg' 홈페이지로 이동합니다">
           </a>
         </div>
       </div>
