구글 지도 api 변경 후 추가

--- a/index.html
+++ b/index.html
@@ -682,7 +682,9 @@
         <p class="location_text">인천광역시 중구 영종해안남로 19-5 (운서동 2877)</p>
         <a href="#none" class="location_text_tel">Tel. 032 743 9000 / Fax. 032 743 9300</a>
         <div class="location_map">
-          <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBQWzaCV6p-nryMsEsqMC9EB2g0krR18j0&q=네스트호텔&region=KR&language=ko" frameborder="0"></iframe>
+          <iframe src="https://storage.googleapis.com/maps-solutions-zf2t9lylno/locator-plus/th8c/locator-plus.html">
+          </iframe>
+          <!-- <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBQWzaCV6p-nryMsEsqMC9EB2g0krR18j0&q=네스트호텔&region=KR&language=ko" frameborder="0"></iframe> -->
         </div>
       </div>
     </section>
