등록정보 가상으로 수정

--- a/index.html
+++ b/index.html
@@ -191,27 +191,27 @@
           <ul class="contact_us_list">
             <li>
               <p class="contact_where">대표전화</p>
-              <a href="#none" class="contact_number">032 743 9000</a>
+              <a href="#none" class="contact_number">032 123 01234</a>
             </li>
             <li>
               <p class="contact_where">팩스</p>
-              <a href="#none" class="contact_number">032 743 9300</a>
+              <a href="#none" class="contact_number">032 123 01234</a>
             </li>
             <li>
               <p class="contact_where">플라츠 (레스토랑)</p>
-              <a href="#none" class="contact_number">032 743 9311</a>
+              <a href="#none" class="contact_number">032 123 01234</a>
             </li>
             <li>
               <p class="contact_where">쿤스트라운지 (바)</p>
-              <a href="#none" class="contact_number">032 743 9125</a>
+              <a href="#none" class="contact_number">032 123 01234</a>
             </li>
             <li>
               <p class="contact_where">디오디토리움 (연회/미팅)</p>
-              <a href="#none" class="contact_number">032 743 9010</a>
+              <a href="#none" class="contact_number">032 123 01234</a>
             </li>
             <li>
               <p class="contact_where">인피니티풀 스트란트 (수영장)</p>
-              <a href="#none" class="contact_number">032 743 9054</a>
+              <a href="#none" class="contact_number">032 123 01234</a>
             </li>
           </ul>
         </div>
@@ -287,7 +287,6 @@
               </div>
             </div>
             <p class="count_guide">* 0 ~ 47 개월 이하</p>
-            <!-- 레스토랑 예약 인원 수 조절 창 -->
           </div>
         </div>
         <div class="reserv_bar">
@@ -634,28 +633,28 @@
               <p class="dining_place_detail">
                 독일어로 ‘넓은 광장’을 뜻하는 플라츠에서는, 엄선된 재료로 정성스럽게 만들어진 다양한 메뉴의 올데이 다이닝을 사랑하는 사람들과 함께 즐기실 수 있습니다.
               </p>
-              <a class="dining_place_number" href="#none">예약 및 문의 032 743 9311</a>
+              <a class="dining_place_number" href="#none">예약 및 문의 032 123 01234</a>
             </li>
             <li class="dining_info dining_info_kunst">
               <h3 class="dining_name">Kunst Lounge</h3>
               <p class="dining_place_detail">
                 독일어로 예술작품, 문예 등을 뜻하는 쿤스트 라운지에서는 머무는 공간을 넘어 당신의 감각을 일깨우고 새로운 라이프 스타일을 제공합니다.
               </p>
-              <a class="dining_place_number" href="#none">예약 및 문의 032 743 93125</a>
+              <a class="dining_place_number" href="#none">예약 및 문의 032 123 01234</a>
             </li>
             <li class="dining_info dining_info_luft">
               <h3 class="dining_name">Luft The Bar</h3>
               <p class="dining_place_detail">
                 독일어로 대기를 뜻하는 루프트 더 바는 푸른 솔 숲과 서해의 낭만적인 노을을 조망하며 간단한 스낵을 즐길 수 있는 공간입니다.
               </p>
-              <a class="dining_place_number href="#none">예약 및 문의 032 743 9296</a>
+              <a class="dining_place_number href="#none">예약 및 문의 032 123 01234</a>
             </li>
             <li class="dining_info dining_info_room">
               <h3 class="dining_name">Room Service</h3>
               <p class="dining_place_detail">
                 또 하나의 네스트인 객실은 내방에 있는 듯한 편안함과 섬세한 서비스를 제공합니다. 당신만을 위한 이곳에서 프리미엄 다이닝을 즐겨보세요.
               </p>
-              <a class="dining_place_number" href="#none">예약 및 문의 032 743 9315</a>
+              <a class="dining_place_number" href="#none">예약 및 문의 032 123 01234</a>
             </li>
           </ul>
           <ul class="dining_type_btn">
@@ -679,8 +678,8 @@
     <section class="location_wrap" id="location">
       <div class="location_container">
         <h2 class="section_title_en">Location</h2>
-        <p class="location_text">인천광역시 중구 영종해안남로 19-5 (운서동 2877)</p>
-        <a href="#none" class="location_text_tel">Tel. 032 743 9000 / Fax. 032 743 9300</a>
+        <p class="location_text">인천광역시 중구 영종해안남로 (가나다 0123)</p>
+        <a href="#none" class="location_text_tel">Tel. 032 123 0000 / Fax. 032 123 0000</a>
         <div class="location_map">
           <iframe src="https://storage.googleapis.com/maps-solutions-zf2t9lylno/locator-plus/th8c/locator-plus.html"></iframe>
         </div>
@@ -707,21 +706,17 @@
             </li>
           </ul>
           <div class="footer_address_box">
-            <p class="under_address"><span>주소</span>인천광역시 중구 영종해안남로 19-5 (운서동 2877)</p>
-            <p class="under_address"><span>이메일</span>info@nesthotel.co.kr</p>
-            <p class="under_address"><span>상호명</span>네스트(주)</p>
-            <p class="under_address"><span>대표이사</span>김영재, 이승형</p>
-            <p class="under_address"><span>사업자등록번호</span>535-ㅇㅇ-01931</p>
-            <p class="under_address"><span>통신판매업신고</span>2021-인천중구-0087</p>
+            <p class="under_address"><span>주소</span>인천광역시 중구 영종해안남로 (가나다 0123)</p>
+            <p class="under_address"><span>이메일</span>info@ejportfolio.ej.kr</p>
+            <p class="under_address"><span>상호명</span>포트폴리오 네스트</p>
+            <p class="under_address"><span>사업자등록번호</span>535-ㅇㅇ-012345</p>
+            <p class="under_address"><span>통신판매업신고</span>2021-인천중구-012345</p>
           </div>
           <p class="copyright">2014 by <span>nest hotel</span> Co. Ltd.</p>
         </div>
         <div class="footer_right">
           <a href="#none" class="partners_logo">
-            <img src="/ejin-nest/img/dh_logo.png" alt="네스트 호텔의 파트너 '디자인호텔 멤버스' 홈페이지로 이동합니다">
-          </a>
-          <a href="#none" class="partners_logo">
-            <img src="/ejin-nest/img/spg_logo.png" alt="네스트 호텔의 파트너 'spg' 홈페이지로 이동합니다">
+            <img src="/ejin-nest/img/dh_logo.png" alt="파트너 '디자인호텔 멤버스' 홈페이지로 이동합니다">
           </a>
         </div>
       </div>
