--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <script src="/ejin-nest/js/nest-script.js"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=bed719e14d2836e06046cb2d4e6ea538"></script>
+    <script>
+    var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+        mapOption = { 
+            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+            level: 3 // 지도의 확대 레벨
+        };
+
+    var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+    // 마커가 표시될 위치입니다 
+    var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667); 
+
+    // 마커를 생성합니다
+    var marker = new kakao.maps.Marker({
+        position: markerPosition
+    });
+
+    // 마커가 지도 위에 표시되도록 설정합니다
+    marker.setMap(map);
+
+    // 아래 코드는 지도 위의 마커를 제거하는 코드입니다
+    // marker.setMap(null);    
+    </script>
   </head>
   <body>
     <ul class="skip-menu">
@@ -681,8 +705,9 @@
         <p class="location_text">인천광역시 중구 영종해안남로 (가나다 0123)</p>
         <a href="#none" class="location_text_tel">Tel. 032 123 0000 / Fax. 032 123 0000</a>
         <div class="location_map">
-          <iframe src="https://storage.googleapis.com/maps-solutions-zf2t9lylno/locator-plus/th8c/locator-plus.html"></iframe>
+          <iframe src="http://storage.googleapis.com/maps-solutions-zf2t9lylno/locator-plus/th8c/locator-plus.html"></iframe>
         </div>
+        <div id="map" style="width:100%; height:350px;"></div>
       </div>
     </section>
     <footer>
