경로 오류 수정

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- map api -->
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=bed719e14d2836e06046cb2d4e6ea538"></script>
-    <script src="/ejin-nest/js/kakaomap.js"></script>
+    <script src="/ejin-nest/js/map.js"></script>
 
     <script src="/ejin-nest/js/nest-script.js"></script>
   </head>
