미사용 주석 삭제, 로그인 페이지 경로 수정, 맵 텍스트 자간 더 줄임

--- a/sub-page/nest-login.html
+++ b/sub-page/nest-login.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ej's nest hotel renewal login</title>
-    <link rel="stylesheet" href="/sub-page/login-style.css">
+    <link rel="stylesheet" href="/ejin-nest/sub-page/login-style.css">
 </head>
 <body>
     <div class="login-wrap">
         <div class="login-container">
           <h1 class="login-title">
-            <a href="/index.html" class="title-back">
-              <img src="/img/main_logo.png" alt="네스트호텔 메인 페이지로 돌아가기">
+            <a href="/ejin-nest/index.html" class="title-back">
+              <img src="/ejin-nest/img/main_logo.png" alt="네스트호텔 메인 페이지로 돌아가기">
             </a>
           </h1>
           <form class="login-form">
